Fixed the alignment issue of images in product edit and add pages

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,100 +13,136 @@
 @import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
 
 @import '../node_modules/@syncfusion/ej2-angular-calendars/styles/material.css';
+
 /* @import url("https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"); */
 .float {
   float: right;
 }
+
 .m-l-10 {
   margin-left: 10px;
 }
+
 .m-t-10 {
   margin-top: 10px;
 }
+
 .m-l-17 {
   margin-left: 17px;
 }
+
 .m-b-10 {
   margin-bottom: 10px;
 }
+
 .m-r-10 {
   margin-right: 10px;
 }
+
 .m-t-20 {
   margin-top: 20px;
 }
+
 .m-b-20 {
   margin-bottom: 20px;
 }
+
 .m-l-20 {
   margin-left: 20px;
 }
+
 .m-t-30 {
   margin-top: 30px;
 }
+
 .m-b-30 {
   margin-bottom: 30px;
 }
+
 .padding-30 {
   padding: 30px;
 }
+
 .m-l-30 {
   margin-left: 30px;
 }
+
 .m-b-50 {
   margin-bottom: 50px;
 }
+
 .p-t-10 {
   padding-top: 10px;
 }
+
 .p-t-20 {
   padding-top: 20px;
 }
+
 .p-b-20 {
   padding-bottom: 20px;
 }
-.p-b-10{
+
+.p-b-10 {
   padding-bottom: 10px;
 }
+
 .p-b-50 {
   padding-bottom: 50px;
 }
-.p-l-20{
+
+.p-l-20 {
   padding-left: 20px;
 }
-.p-10{
+
+.p-10 {
   padding: 10px;
 }
+
 .m-l-80 {
   margin-left: 80px;
 }
+
 .text-style {
   color: #111;
 }
+
 .small-font {
   font-size: 12px;
   line-height: 1.75;
 }
+
 .border-class {
   border-bottom: 1px #ddd solid;
 }
+
 .font-class {
   font-size: 17px;
   line-height: 1.255;
 }
+
 .font-13 {
   font-size: 13px;
   line-height: 1.75;
 }
+
 .line-height-style {
   line-height: 2.75;
 }
-.w-100{
-  width:100%;
+
+.w-100 {
+  width: 100%;
 }
-.f-weight{
+
+.f-weight {
   font-weight: lighter;
 }
+
 .text-centre {
   text-align: center;
+}
+
+.align-image {
+  display: inline-flex;
+  flex-wrap: wrap;
 }
